[package]
name = "home-db-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
influxdb = { version = "0.7", features = ["derive"] }
chrono = "0.4"                                        # For timestamp handling
serde = { version = "1.0", features = ["derive"] }    # For serialization
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
