[package]
name = "home-db-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
csv = "1.2"
influxdb = { version = "0.7.0", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
